k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-backend
  namespace: hajeer-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domain-backend
  template:
    metadata:
      labels:
        app: domain-backend
    spec:
      imagePullSecrets:
        - name: odp-pull-secret
      containers:
        - name: backend
          image: registry.odp.om/csharma/coe/domain-backend:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 15
