k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-backend
  namespace: hajeer-test
spec:
  type: LoadBalancer
  selector:
    app: domain-backend
  ports:
    - port: 4000
      targetPort: 4000
