k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-db
  namespace: hajeer-test
spec:
  selector:
    app: domain-db
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
