k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-frontend
  namespace: hajeer-test
spec:
  type: LoadBalancer
  selector:
    app: domain-frontend
  ports:
    - port: 80
      targetPort: 80
