k8s/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: domain-frontend
  namespace: hajeer-test
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - domain.local
  rules:
    - backendRefs:
        - name: domain-frontend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: domain-backend
  namespace: hajeer-test
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - domain-api.local
  rules:
    - backendRefs:
        - name: domain-backend
          port: 4000
